[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Junk/JunkDiamond.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Bin/Bin.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Images/square8x8.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Junk/JunkTriangle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Credits Themes/white_slider.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/Credits Themes/black_background.tres" type="StyleBox" id=8]
[ext_resource path="res://Assets/SFX/Collected.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/Lose.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/MenuClick.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/NewHiScore.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/Music/music.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Fonts/Presets/InstructionFont.tres" type="DynamicFont" id=14]
[ext_resource path="res://Assets/Images/music.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/credits.png" type="Texture" id=16]
[ext_resource path="res://Assets/Fonts/Presets/TitleFont.tres" type="DynamicFont" id=17]
[ext_resource path="res://Assets/Fonts/Presets/ScoreFont.tres" type="DynamicFont" id=18]
[ext_resource path="res://Assets/Fonts/Presets/YearFont.tres" type="DynamicFont" id=19]
[ext_resource path="res://Assets/Fonts/Presets/BigScoreFont.tres" type="DynamicFont" id=20]
[ext_resource path="res://Assets/Fonts/Presets/CreditsTitleFont.tres" type="DynamicFont" id=21]
[ext_resource path="res://Assets/Fonts/Presets/CreditsTextFont.tres" type="DynamicFont" id=22]
[ext_resource path="res://Scenes/Junk/JunkSquare.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/Junk/JunkRectangle.tscn" type="PackedScene" id=24]
[ext_resource path="res://Scenes/Junk/JunkLightning.tscn" type="PackedScene" id=25]
[ext_resource path="res://Scenes/Junk/JunkArrow.tscn" type="PackedScene" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 20 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 4, 4, 0, 0, 0, 0, 4, 188, 0, 0, 0, 0, 104, 188, 0, 0, 0, 0, 104, 4, 0, 0, 0, 0, 4, 4 )
}

[sub_resource type="Theme" id=4]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = ExtResource( 7 )
VScrollBar/styles/grabber_highlight = ExtResource( 7 )
VScrollBar/styles/grabber_pressed = ExtResource( 7 )
VScrollBar/styles/scroll = ExtResource( 8 )
VScrollBar/styles/scroll_focus = null

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
junks = [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ]

[node name="Bins" type="Node2D" parent="."]

[node name="WhiteBin" parent="Bins" instance=ExtResource( 4 )]

[node name="BlueBin" parent="Bins" instance=ExtResource( 4 )]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( 102, 6 )
red = false
green = false

[node name="RedBin" parent="Bins" instance=ExtResource( 4 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 102, 186 )
green = false
blue = false

[node name="GreenBin" parent="Bins" instance=ExtResource( 4 )]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 6, 186 )
red = false
blue = false

[node name="Borders" type="Node2D" parent="."]
visible = false

[node name="NorthBorder" type="StaticBody2D" parent="Borders"]
position = Vector2( 56, -20 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/NorthBorder"]
rotation = 3.14159
shape = SubResource( 1 )
one_way_collision_margin = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="SouthBorder" type="StaticBody2D" parent="Borders"]
position = Vector2( 56, 212 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders/SouthBorder"]
shape = SubResource( 1 )
one_way_collision_margin = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="WestBorder" type="StaticBody2D" parent="Borders"]
position = Vector2( -20, 96 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Borders/WestBorder"]
rotation = -4.71238
shape = SubResource( 2 )
one_way_collision_margin = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="EastBorder" type="StaticBody2D" parent="Borders"]
position = Vector2( 128, 96 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Borders/EastBorder"]
rotation = -1.57079
shape = SubResource( 2 )
one_way_collision_margin = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="JunkGenerator" type="Node2D" parent="."]

[node name="JunkTimer" type="Timer" parent="JunkGenerator"]
wait_time = 5.0

[node name="JunkPath" type="Path2D" parent="JunkGenerator"]
curve = SubResource( 3 )

[node name="JunkPathSpawner" type="PathFollow2D" parent="JunkGenerator/JunkPath"]
position = Vector2( 4, 4 )
rotation = 1.5708

[node name="Junk" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]
collision_mask = 7

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainOverlay" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TapButton" type="TextureButton" parent="CanvasLayer/MainOverlay"]
modulate = Color( 0.196078, 0.196078, 0.196078, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopVBox" type="VBoxContainer" parent="CanvasLayer/MainOverlay"]
anchor_right = 1.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="CanvasLayer/MainOverlay/TopVBox"]
margin_right = 108.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 17 )
text = "GC"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer/MainOverlay/TopVBox"]
margin_top = 34.0
margin_right = 108.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 18 )
text = "Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreLabel" type="Label" parent="CanvasLayer/MainOverlay/TopVBox"]
margin_top = 45.0
margin_right = 108.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 18 )
text = "High: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OneBlinkTimer" type="Timer" parent="CanvasLayer/MainOverlay/TopVBox/HighscoreLabel"]
wait_time = 0.5

[node name="MidVBox" type="VBoxContainer" parent="CanvasLayer/MainOverlay"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -9.0
margin_bottom = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TapLabel" type="Label" parent="CanvasLayer/MainOverlay/MidVBox"]
margin_right = 108.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 14 )
text = "Tap when ready"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomVBox" type="VBoxContainer" parent="CanvasLayer/MainOverlay"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VertBox" type="HBoxContainer" parent="CanvasLayer/MainOverlay/BottomVBox"]
margin_right = 108.0
margin_bottom = 12.0

[node name="Label" type="Label" parent="CanvasLayer/MainOverlay/BottomVBox/VertBox"]
margin_top = 1.0
margin_right = 43.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 19 )
text = "2020 Kiel"

[node name="Control" type="Control" parent="CanvasLayer/MainOverlay/BottomVBox/VertBox"]
margin_left = 47.0
margin_right = 76.0
margin_bottom = 12.0
size_flags_horizontal = 3

[node name="MusicButton" type="TextureButton" parent="CanvasLayer/MainOverlay/BottomVBox/VertBox"]
margin_left = 80.0
margin_right = 92.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainOverlay/BottomVBox/VertBox/MusicButton"]
margin_left = 2.0
margin_top = 2.0
margin_right = 10.0
margin_bottom = 10.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="CanvasLayer/MainOverlay/BottomVBox/VertBox"]
margin_left = 96.0
margin_right = 108.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainOverlay/BottomVBox/VertBox/CreditsButton"]
margin_left = 2.0
margin_top = 2.0
margin_right = 10.0
margin_bottom = 10.0
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreGameLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
custom_fonts/font = ExtResource( 20 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabelTimer" type="Timer" parent="CanvasLayer/ScoreGameLabel"]
wait_time = 2.0
one_shot = true

[node name="ScoreTween" type="Tween" parent="CanvasLayer/ScoreGameLabel"]

[node name="CreditsOverlay" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TapCreditsButton" type="TextureButton" parent="CanvasLayer/CreditsOverlay"]
modulate = Color( 0.196078, 0.196078, 0.196078, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsLabel" type="Label" parent="CanvasLayer/CreditsOverlay"]
anchor_right = 1.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 21 )
text = "Credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CreditsOverlay"]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.812
margin_bottom = 0.095993
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/CreditsOverlay/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 104.0
margin_bottom = 103.0
size_flags_vertical = 3
theme = SubResource( 4 )
custom_fonts/normal_font = ExtResource( 22 )
text = "GC (v.1.1 post jam)

Made by Kiel (Krzysztof Kielczewski) for Easy Jam (8-bits to Infinity) and uses these assets:

- i Pixel u fonts by rodrigosrtz (free)

- Kenney Mini font by Kenney (CC0)

- Sound effects by phoenix1291 from SFX: The Ultimate 2017 8 bit Mini pack (CC0)

- anything else made by Kiel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TapMenuLabel" type="Label" parent="CanvasLayer/CreditsOverlay"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
custom_fonts/font = ExtResource( 14 )
text = "Tap to menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollectedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="MenuClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="NewHighscoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -4.0
autoplay = true
[connection signal="junk_collected" from="Bins/WhiteBin" to="." method="_on_Bin_junk_collected"]
[connection signal="wrong_color" from="Bins/WhiteBin" to="." method="_on_Bin_wrong_color"]
[connection signal="junk_collected" from="Bins/BlueBin" to="." method="_on_Bin_junk_collected"]
[connection signal="wrong_color" from="Bins/BlueBin" to="." method="_on_Bin_wrong_color"]
[connection signal="junk_collected" from="Bins/RedBin" to="." method="_on_Bin_junk_collected"]
[connection signal="wrong_color" from="Bins/RedBin" to="." method="_on_Bin_wrong_color"]
[connection signal="junk_collected" from="Bins/GreenBin" to="." method="_on_Bin_junk_collected"]
[connection signal="wrong_color" from="Bins/GreenBin" to="." method="_on_Bin_wrong_color"]
[connection signal="timeout" from="JunkGenerator/JunkTimer" to="." method="_on_JunkTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/MainOverlay/TapButton" to="." method="_on_TapButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MainOverlay/BottomVBox/VertBox/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MainOverlay/BottomVBox/VertBox/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="timeout" from="CanvasLayer/ScoreGameLabel/ScoreLabelTimer" to="." method="_on_ScoreLabelTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/CreditsOverlay/TapCreditsButton" to="." method="_on_TapCreditsButton_pressed"]
